[project]
name = "manim-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "manimgl",
    "pywavefront>=1.3.3",
    "raenimgl",
    "trimesh>=4.11.5",
]

[tool.uv.sources]
manimgl = { git = "https://github.com/CodingVillainKor/manimgl" }
raenimgl = { git = "https://github.com/CodingVillainKor/raenimgl.git" }
